--- a/html5/html5PlaceHolder.html
+++ b/html5/html5PlaceHolder.html
@@ -6,11 +6,17 @@
 </head>
 <body>
 <form>
-    Name: <input name="user_name" placeholder="Put Your Name Here">
-    <br /> Part Number<input name="part_numb" placeholder="Must be 4 field wide: XXXX">
-    <br />  <input type="submit" value="Search">
-    <br /> Serial Number <input name="serial" placeholder="6 digits" autofocus />
+    Name: <input name="user_name" placeholder="Put Your Name Here"  required>
+    <br /> Part Number<input name="part_numb" placeholder="Must be 4 field wide: XXXX" pattern="X[\d]{4}">
+    <br /> Serial Number <input name="serial" placeholder="6 digits" pattern="[0-9]{3}-[0-9]{2}-[0-9]{4}|{0-9}9" autofocus />
     <br /> Email: <input type="email" name="yourEmail" size="20" maxlength="44" />
+    <br /> URL: <input type="URL" name="yourURL" size="20" maxlength="44" placehoder="Valid URL" />
+    <br /> Spinner: <input type="number" min="0" max="10" value="5">
+    <br /> Range: 0-100 <input type="range" min="0" max="100" value="10" step="2">
+    <br />  Number: <input type="number" name="n"  min="1" max="100" />
+    <br />  Number: <input type="date" name="bday" min="2000-01-02" max="2200-01-01"/>
+    <br /> Color: <input type="color" name="theColor">
+    <br />  <input type="submit" value="Search">
 </form><br> <pre>
 </body>
 </html>
