--- a/html5/formCssStyled.html
+++ b/html5/formCssStyled.html
@@ -6,7 +6,11 @@
     <style>
         fieldset { width: 60% }
         legend { font-size:  1.5em; font-weight: bold}
-
+        label.field {
+            text-align: right;
+            width: 100px;
+            float: left;
+        }
     </style>
 </head>
 <body>
@@ -14,11 +18,11 @@
 <form name='myForm' action='formHandler.php' id='myForm' method="post">
     <fieldset>
         <legend> Shipping Information </legend>
-        <p><label>Name:</label> <input type='text' id='name' name='name'></p>
-        <p><label> Address</label>: <input type='text' id='Address' name='Address'></p>
-        <p><label> City</label>: <input type='text' id='city' name='city'></p>
-        <p><label>State</label>: <input type='text' id='state' name='state'></p>
-        <p><label>zip</label>: <input type='text' id='zip' name='zip'></p>
+        <p><label class="field" for='name'>Name</label>: <input type='text' id='name' name='name'></p>
+        <p><label class="field" for='Address'> Address</label>: <input type='text' id='Address' name='Address'></p>
+        <p><label class="field" for='city'> City</label>: <input type='text' id='city' name='city'></p>
+        <p><label class="field" for='state'>State</label>: <input type='text' id='state' name='state'></p>
+        <p><label class="field" for='zip'>zip</label>: <input type='text' id='zip' name='zip'></p>
         <br />
     </fieldset>
     <input type='submit' value='Submit Info'>
