list for navigation

--- a/CSSBox/Box1.html
+++ b/CSSBox/Box1.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Box1/title>
+    <title>Box1</title>
 </head>
 <body>
-
+Hello World
+<span style="background-color: chocolate;border: 5px solid black;"> this is some text </span>
 </body>
 </html>
