--- a/CSSBox/InClassBoxofBoxes.html
+++ b/CSSBox/InClassBoxofBoxes.html
@@ -14,7 +14,10 @@
         }
         div#d1 {
             background-color:red;
-            margin:55px;
+            margin-left:155px;
+            width:200px;
+            border-left: 1.2em solid blue;
+            margin: 10px 5px 7px 15px;
         }
         div#d2 {
             background-color:green;
