--- a/CSSBox/exampleFixed.html
+++ b/CSSBox/exampleFixed.html
@@ -5,17 +5,31 @@
     <style>
         p.pos_fixed {
             position: fixed;
-            top: 30px;
-            right: 5px;
+            top: -5px;
+            left: 5px;
             color: red;
             background-color: yellow;
+            width: 100%;
+            height: 15%;
+            padding: 50px;
+        }
+        p.pos_fixed_left {
+            position: fixed;
+            top: 150px;
+            left: 5px;
+            color: red;
+            background-color: blue;
+            width: 10%;
+            height: 40%;
+            padding: 40px;
         }
     </style>
 </head>
 <body>
-
+<p class="pos_fixed">Big Cool Site Name.</p>
+<p class="pos_fixed_left"> Some Nav Items</p>
 <p><b>Note:</b> IE7 and IE8 supports the fixed value only if a !DOCTYPE is specified.</p>
 <p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p><p>Some text</p>
-<p class="pos_fixed">Some positioned text.</p>
+
 </body>
 </html>
