--- a/CSSBox/relative.html
+++ b/CSSBox/relative.html
@@ -8,6 +8,7 @@
 
 <p>Paragraph 1.</p>
 <p>Paragraph 2.</p>
-<p style="position: relative;left: 2em; top: 5em;">Paragraph 3.</p
+<p style="position: absolute;left: 20px; top: 10px;">Paragraph 3.</p>
+<p> Paragraph 4 </p>
 </body>
 </html>
