Distance From Chicago from 10_23

--- a/CSSBox/InClass_10_21_Classes.html
+++ b/CSSBox/InClass_10_21_Classes.html
@@ -22,6 +22,6 @@
 <div id="one">
    The sale is here!
 </div>
-<button id="myButton" onclick="showSale()"> Show Sales</button>
+<button id="myButton" onclick="showSale2()"> Show Sales</button>
 </body>
 </html>
