--- a/bootstrap/homePage.html
+++ b/bootstrap/homePage.html
@@ -36,11 +36,13 @@
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#">
-        <img src="img/howGit.jpg" height="10%" width="10%"/>
+        <img src="img/howGit.jpg" height="40px" width="40px"/>
+        AU Computer Science Club
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
+    <div class="navbar-brand" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" id="currNav" href="#" >Home <span class="sr-only">(current)</span></a>
